--- a/package.json
+++ b/package.json
@@ -1,10 +1,43 @@
 {
   "name": "grunt-web-development",
-  "version": "0.0.1",
+  "version": "0.0.24",
   "description": "Description.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "spectingular-configurer": "file:../../stash/spectingular-configurer",
+    "grunt": "~0.4.5",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-file-blocks": "^0.3.3",
+    "grunt-angular-templates": "^0.5.7",
+    "grunt-ng-annotate": "^0.8.0",
+    "grunt-include-source": "^0.5.1",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-filerev": "^2.1.2",
+    "grunt-port-pick": "^1.5.1",
+    "load-grunt-tasks": "^3.1.0",
+    "grunt-usemin": "^3.0.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-istanbul": "^0.4.0",
+    "grunt-karma": "^0.9.0",
+    "jasmine-reporters": "^1.0.1",
+    "jshint-junit-reporter": "0.1.0",
+    "karma": "^0.12.28",
+    "karma-coverage": "^0.2.7",
+    "karma-jasmine": "^0.1.5",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "grunt-protractor-coverage": "^0.2.13",
+    "protractor": "^2.1.0",
+    "mkdirp": "^0.5.0",
+    "grunt-protractor-runner" : "^2.0.0"    
+    
   },
   "repository": {
     "type": "git",
