--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "spectingular-configurer": "file:../../stash/spectingular-configurer",
+    "spectingular-configurer": "^1.0.1",
     "grunt": "~0.4.5",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-file-blocks": "^0.3.3",
