--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-protractor-coverage": "^0.2.13",
     "protractor": "^2.1.0",
     "mkdirp": "^0.5.0",
+    "grunt-contrib-watch" : "^0.6.1",
     "grunt-protractor-runner": "^2.0.0"
   },
   "repository": {
