--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "grunt-protractor-coverage": "^0.2.13",
+    "protractor-html-screenshot-reporter": "^0.0.20",
     "protractor": "^2.1.0",
     "mkdirp": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-wiredep" : "^2.0.0",
     "grunt-protractor-runner": "^2.0.0"
   },
   "repository": {
